# kde-workspace

./: CMakeLists.txt
kwin/: CMakeLists.txt  effects.cpp  eglonxbackend.cpp  events.cpp  glxbackend.cpp  main.cpp  options.cpp  placement.cpp  scene_opengl.cpp  workspace.cpp  xcbutils.h
kwin/effects/desktopgrid/: desktopgrid.cpp
kwin/effects/logout/: logout.cpp
kwin/effects/presentwindows/: presentwindows.cpp  presentwindows.h
kwin/kcmkwin/kwintabbox/: CMakeLists.txt
kwin/tabbox/: clientmodel.cpp  declarative.cpp
plasma/desktop/applets/tasks/: CMakeLists.txt  tasks.cpp  tasks.h
plasma/desktop/applets/tasks/package/contents/ui/: main.qml
plasma/generic/: CMakeLists.txt
plasma/generic/applets/: CMakeLists.txt
plasma/generic/applets/digital_clock/contents/ui/: main.qml
plasma/generic/applets/systemtray/: CMakeLists.txt
plasma/generic/applets/systemtray/protocols/dbussystemtray/: dbussystemtraytask.cpp
plasma/generic/applets/systemtray/protocols/plasmoid/: plasmoidtask.cpp  plasmoidtask.h  plasmoidtaskprotocol.cpp
plasma/generic/applets/systemtray/ui/: applet.cpp  applet.h  mouseredirectarea.cpp  mouseredirectarea.h  widgetitem.cpp
plasma/generic/dataengines/: CMakeLists.txt
plasma/generic/dataengines/powermanagement/: CMakeLists.txt  powermanagementengine.cpp  powermanagementjob.cpp
plasma/generic/dataengines/time/: CMakeLists.txt  plasma_engine_time.json  timeengine.cpp  timeengine.h  timesource.cpp
plasma/generic/wallpapers/image/: backgroundlistmodel.cpp  image.cpp
plasma/netbook/containments/sal/: runnersconfig.cpp  sal.cpp  sal.h
